# markdown-mcp

./: .amazonq  .gitignore  CONVERSION_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_MCP.md  PANDOC_SETUP.md  README.md  STYLE_MAPPING.md  convert_test1_final.py  convert_test_files.py  main.py  mcp_config.json  pyproject.toml  run_mcp_server.py  test_converter.py  test_demo.py  test_design_conversion.py  test_simple_demo.py
doc/: structure.md
src/mcp/markdown_converter/: README.md  __init__.py  batch_processor.py  converter.py  create_dotx_templates.py  create_templates.py  enhanced_server.py  image_handler.py  mermaid_handler.py  pandoc_converter.py  server.py  simple_improved_converter.py  style_mapper.py  template_manager.py
src/mcp/markdown_converter/templates/: corporate.dotx  simple.dotx  technical.dotx
src/old-versions/: README.md  convert_test1.py  convert_test1_debug.py  converter.py  improved_converter.py  server.py  test_converter.py
tests/: run_tests.py  test_batch_conversion.py  test_converter.py  test_design_conversion.py  test_formatting.py  test_improved_converter.py  test_pandoc_converter.py  test_phase2.py  test_phase3.py  test_phase4.py  test_style_mapper.py  test_style_mapper_standalone.py
